--- a/config.env
+++ b/config.env
@@ -1,3 +1,3 @@
 PORT=4000
-MONGO_URI=mongodb+srv://vikasdave:vikasdave0111@cluster0.mmwzo.mongodb.net/users?retryWrites=true&w=majority
+MONGO_URI=mongodb+srv://vikasdave:vikasdave0111@cluster0.9u4b0.mongodb.net/user?retryWrites=true&w=majority
 URL="https://vikasdve.herokuapp.com/" || "http://localhost:4000/"
